Fix cover image display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,12 @@ core-menu > chartbook-item.core-selected.chapter-item {
   text-align:center;
 }
 
+.cover > .page-container > img {
+  margin: 0;
+  max-width:100%;
+  max-height:100%;
+}
+
 .chapter {
   background-position: center;
   background-size: cover;
